--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -113,11 +113,15 @@ ul {
 }
 
 .filters {
+  h2 {
+    font-size: 2.5rem;
+  }
   h3 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-bottom: 1.5rem;
   }
 }
+
 .filters-heading {
   display: flex;
   justify-content: space-between;
