--- a/templates/home.html
+++ b/templates/home.html
@@ -51,11 +51,15 @@
       <div class="filters">
         <form id="filter-form" action="/filter" method="GET">
           <h2 class="filters-heading">
-            Filter <button class="btn ml-a" type="submit">Apply</button>
+            Filters <button class="btn ml-a" type="submit">Apply</button>
           </h2>
           <div class="row">
             <div class="col s12">
-              <h3>By creation date</h3>
+              <h3>
+                By creation date:
+                <span class="min" data-target="creation-range">{{.SearchData.CreationRange.Min}}</span> -
+                <span class="max" data-target="creation-range">{{.SearchData.CreationRange.Max}}</span>
+              </h3>
               <div class="input-field">
                 <div
                   id="creation-range"
@@ -65,7 +69,16 @@
               </div>
             </div>
             <div class="col s12">
-              <h3>By first album date</h3>
+              <h3>
+                By first album date:
+                <span class="min" data-target="first-album-range"
+                  >{{.SearchData.FirstAlbumsRange.Min}}</span
+                >
+                -
+                <span class="max" data-target="first-album-range"
+                  >{{.SearchData.FirstAlbumsRange.Max}}</span
+                >
+              </h3>
               <div class="input-field">
                 <div
                   id="first-album-range"
@@ -75,8 +88,12 @@
               </div>
             </div>
             <div class="col s12">
-              <h3>By number of members</h3>
-              <div class="input-field">
+              <h3>
+                By number of members:
+                <span class='min' data-target='members-range'>{{.SearchData.MembersRange.Min}}</span data-target='members-range'> -
+                 <span class='max' data-target='members-range'>{{.SearchData.MembersRange.Max}}</span>
+              </h3>
+               <div class="input-field">
                 <div
                   id="members-range"
                   data-min="{{.SearchData.MembersRange.Min}}"
@@ -85,7 +102,7 @@
               </div>
             </div>
             <div class="col s12">
-              <h3>By concert location</h3>
+              <h3>By concert locations</h3>
               {{ range .SearchData.Countries }}
               <label class="my-1">
                 <input type="checkbox" checked />
@@ -97,7 +114,7 @@
         </form>
       </div>
     </div>
-    <div class="col s12 l8">
+    <div id="artist-list" class="col s12 l8">
       <div class="row">
         {{ range .Artists }}
         <div class="col s12 m6 l4">
@@ -126,65 +143,6 @@
 
 <script src="/static/js/nouislider.min.js"></script>
 <script src="/static/js/wNumb.min.js"></script>
-<script>
-  var mRange = createRange('members-range')
-  var faRange = createRange('first-album-range')
-  var cRange = createRange('creation-range')
-
-  function createRange(id) {
-    var membersRangeEl = document.getElementById(id)
-    var min = Number(membersRangeEl.getAttribute('data-min'))
-    var max = Number(membersRangeEl.getAttribute('data-max'))
-
-    return noUiSlider.create(membersRangeEl, {
-      start: [min, max],
-      connect: true,
-      step: 1,
-      orientation: 'horizontal', // 'horizontal' or 'vertical'
-      range: {
-        min: min,
-        max: max
-      },
-      format: wNumb({
-        decimals: 0
-      })
-    })
-  }
-
-  var filterForm = document.getElementById('filter-form')
-  filterForm.addEventListener('submit', function(e) {
-    e.preventDefault()
-    var data = {
-      countries: [],
-      creationRange: { min: 0, max: 0 },
-      membersRange: { min: 0, max: 0 },
-      firstAlbumsRange: { min: 0, max: 0 }
-    }
-
-    var inputs = document.querySelectorAll('#filter-form input:checked')
-    inputs.forEach(input =>
-      data.countries.push(input.closest('label').textContent.trim())
-    )
-
-    let min, max
-    ;[min, max] = mRange.get()
-    data.membersRange.min = Number(min)
-    data.membersRange.max = Number(max)
-    ;[min, max] = cRange.get()
-    data.creationRange.min = Number(min)
-    data.creationRange.max = Number(max)
-    ;[min, max] = faRange.get()
-    data.firstAlbumsRange.min = Number(min)
-    data.firstAlbumsRange.max = Number(max)
-
-    fetch('/filter', {
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      method: 'POST',
-      body: JSON.stringify(data)
-    })
-  })
-</script>
+<script src="/static/js/home.js"></script>
 
 {{ end }}
